# otel-agentic-stack

./: .env.example  .gitignore  .gitlab-ci.yml  LICENSE  Makefile  PLAN.md  README.md
agent/: Dockerfile  agent.py  app.py  llm.py  requirements.txt  subagents.py  tools.py
collector/: Dockerfile
dashboards/: agent-overview.json  cost-usage.json  multi-agent.json  performance.json  pipeline-health.json
docs/: ARCHITECTURE-REVIEW.md  COMPONENTS-AND-FEATURES.md  COMPONENTS.md
docs/screenshots/: README.md
helm/: README.md  values-consumer.yaml  values-gateway.yaml
k8s/: 00-namespace.yaml  10-kafka.yaml  15-minio.yaml  20-tempo.yaml  21-loki.yaml  22-prometheus.yaml  23-grafana.yaml  24-alertmanager.yaml  30-collector-gateway.yaml  31-collector-consumer.yaml  40-agent.yaml  41-agents-extra.yaml  50-hpa.yaml  60-networkpolicy.yaml
kind/: cluster.yaml
obs/: README.md  pyproject.toml
obs/obs/: __init__.py
scripts/: load.sh  verify.sh
