[project]
name = "obs"
version = "0.1.0"
description = "Drop-in OpenTelemetry instrumentation for agentic workloads (minimal-code-change adoption)."
requires-python = ">=3.10"
dependencies = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27.0",
    # Auto-instrumentation (OpenLLMetry / OTel contrib). All optional at runtime — guarded imports.
    "opentelemetry-instrumentation-anthropic>=0.33.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["obs*"]
